<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/OddEven"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:onClick="oddEven"
        android:text=" Check Odd Even"
        app:layout_constraintBottom_toTopOf="@+id/Fibo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckPrime"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/Fibo"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:onClick="checkFibo"
        android:text="@string/fibonacci_series"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OddEven"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="53dp"
        android:layout_marginEnd="104dp"
        android:gravity="center"
        android:text="@string/multi_working"
        android:textColor="#193EE2"
        android:textDirection="firstStrong"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="349dp"
        android:layout_height="69dp"
        android:text= "@string/look_for_a_list_of_choices_presented_to_you"
        android:textColor="#123EAF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/CheckPrime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/CheckPrime"
        android:layout_width="158dp"
        android:layout_height="62dp"
        android:onClick="checkPrime"
        android:text="@string/check_prime"
        app:layout_constraintBottom_toTopOf="@+id/OddEven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/how_to_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:onClick="explain"
        android:text="❓"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>

